# MPU6050-for-ESP32

./: .gitignore  CMakeLists.txt  README.md
components/mpu6050/: CMakeLists.txt  mpu6050.c
components/mpu6050/include/: mpu6050.h
example/: i2c_with_mpu6050.c
main/: main.c
quaternion_example/: CMakeLists.txt  calculate_quaternion.c
